# sarm

./: .gitignore  pyproject.toml
data/: towel_base_with_rewards.json
src/sarm/config/: sarm_config.py
src/sarm/dataset/: data_utils.py  dataset.py  gap_dataset.py  normalizer.py
src/sarm/model/: clip.py  reward_sarm.py  sarm.py
src/sarm/scripts/: compute_norm_stats.py  download_dataset.py  evaluate.py  label_dataset.py  push_daset.py  train.py
src/sarm/utils/: convert_clip.py  logger_setup.py  logging.py  tokenizer.py
tests/: conftest.py  test_calculate_rewards.py  test_clip_inference.py  test_clip_text_equivalence.py  test_clip_vit_b32_equivalence.py  test_compute_norm_stats.py  test_dataset.py  test_gap_dataset.py  test_labeling.py  test_tokenizer.py  test_train.py
